--- a/.github/workflows/daily-contributions.yaml
+++ b/.github/workflows/daily-contributions.yaml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
+  contents: read   # Permiso de lectura crítico añadido
   contents: write
   pull-requests: write
   issues: write
@@ -23,34 +24,38 @@ jobs:
           sudo apt update
           sudo apt install -y gh
           gh auth login --with-token <<< "${{ secrets.AUTO_CONTRIB_TOKEN }}"
+        env:
+          GH_TOKEN: ${{ secrets.AUTO_CONTRIB_TOKEN }}  # Variable crítica añadida
 
   contribute:
     runs-on: ubuntu-latest
     needs: setup
-    strategy:
-      matrix:
-        repo: 
-          - "facebook/react"
-          - "tailwindlabs/tailwindcss"
-          - "vercel/next.js"
-          - "vuejs/core"
-          - "sveltejs/svelte"
-          - "chakra-ui/chakra-ui"
-          - "storybookjs/storybook"
-          - "axios/axios"
-          - "lodash/lodash"
-          - "chartjs/Chart.js"
-          - "adobe/react-spectrum"
-          - "mui/material-ui"
-          - "reduxjs/redux-toolkit"
-          - "react-hook-form/react-hook-form"
-          - "framer/motion"
-          - "threejs/three.js"
+    env:
+      GH_TOKEN: ${{ secrets.AUTO_CONTRIB_TOKEN }}  # Variable para todos los pasos
     steps:
       - name: Get random repo
         id: random-repo
         run: |
-          REPOS=(${{ join(matrix.repo, ' ') }})
+          # Lista de repositorios
+          REPOS=(
+            "facebook/react"
+            "tailwindlabs/tailwindcss"
+            "vercel/next.js"
+            "vuejs/core"
+            "sveltejs/svelte"
+            "chakra-ui/chakra-ui"
+            "storybookjs/storybook"
+            "axios/axios"
+            "lodash/lodash"
+            "chartjs/Chart.js"
+            "adobe/react-spectrum"
+            "mui/material-ui"
+            "reduxjs/redux-toolkit"
+            "react-hook-form/react-hook-form"
+            "framer/motion"
+            "threejs/three.js"
+          )
+          # Seleccionar un repo aleatorio
           SELECTED_REPO=${REPOS[$RANDOM % ${#REPOS[@]}]}
           echo "selected_repo=$SELECTED_REPO" >> $GITHUB_OUTPUT
 
@@ -61,6 +66,11 @@ jobs:
           path: target-repo
           token: ${{ secrets.AUTO_CONTRIB_TOKEN }}
           persist-credentials: true
+          ref: main            # Especificar rama
+          fetch-depth: 0        # Descargar todo el historial
+          sparse-checkout: |     # Descargar solo lo necesario
+            README.md
+            examples/
 
       - name: Make human-like contribution
         run: |
@@ -84,7 +94,7 @@ jobs:
         run: |
           cd target-repo
           git config user.name "Franco Kaddour"
-          git config user.email "francokaddour@gmail.com"  # TU EMAIL AQUÍ
+          git config user.email "francokaddour@gmail.com"
           
           BRANCH_NAME="franco-improvements-$(date +'%m%d')"
           git checkout -b $BRANCH_NAME
@@ -104,15 +114,24 @@ jobs:
       - name: Engage with community
         run: |
           sleep $((300 + RANDOM % 600))
+          # Obtener un issue aleatorio (el primero de la lista)
           ISSUE_NUMBER=$(gh issue list --repo ${{ steps.random-repo.outputs.selected_repo }} --limit 1 --json number -q '.[0].number')
           if [ -n "$ISSUE_NUMBER" ]; then
             gh issue comment $ISSUE_NUMBER --repo ${{ steps.random-repo.outputs.selected_repo }} \
               --body "Interesante problema! Desde mi experiencia con frontend, sugeriría probar este enfoque..."
           fi
 
+      - name: Verify access (Diagnóstico)
+        run: |
+          echo "Token usado: ${{ secrets.AUTO_CONTRIB_TOKEN }}"
+          gh auth status
+          gh api /repos/${{ steps.random-repo.outputs.selected_repo }} --jq .permissions
+
   update-profile:
     runs-on: ubuntu-latest
     needs: contribute
+    env:
+      GH_TOKEN: ${{ secrets.AUTO_CONTRIB_TOKEN }}  # Variable para todos los pasos
     steps:
       - name: Update profile README
         uses: actions/checkout@v4
@@ -129,15 +148,16 @@ jobs:
           gh pr list --author FrancoKaddour --limit 5 --json repository,url,title | \
           jq -r '.[] | "- [\(.repository.name)]\(.url) - \(.title)"' >> new-section.md
           
-          # Insertar en README
+          # Insertar en README entre los marcadores
           awk '/<!-- CONTRIB_START -->/{print; print ""; while(getline <"new-section.md") print; f=1} /<!-- CONTRIB_END -->/{f=0} !f' README.md > tmp.md
           mv tmp.md README.md
+          rm new-section.md
 
       - name: Commit changes
         run: |
           cd profile
           git config user.name "Franco Kaddour"
-          git config user.email "francokaddour@gmail.com"  # TU EMAIL AQUÍ
+          git config user.email "francokaddour@gmail.com"
           git add README.md
           git commit -m "✨ Actualizar contribuciones"
           git push
