--- a/.github/workflows/daily-contributions.yaml
+++ b/.github/workflows/daily-contributions.yaml
@@ -145,13 +145,15 @@ jobs:
           echo "<!-- Contributed by Franco Kaddour via a small improvement for learning and OSS love. -->" >> "$file"
           echo "Done minor edit in $file"
 
-      - name: Create branch, commit and push
-        run: |
+          - name: Create branch, commit and push
+          run: |
           cd target-repo
           branch_name="franco/contrib-$(date +%s)"
           git checkout -b "$branch_name"
           git config user.name "${GIT_AUTHOR_NAME}"
           git config user.email "${GIT_AUTHOR_EMAIL}"
+          # Este es el fix clave:
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ steps.pick_repo.outputs.candidate }}.git
           git add "${{ steps.file.outputs.file }}"
           git commit -m "Small improvement: docs/example/test (learning and OSS ❤️)"
           git push --set-upstream origin "$branch_name"
