--- a/.github/workflows/daily-contributions.yaml
+++ b/.github/workflows/daily-contributions.yaml
@@ -2,13 +2,12 @@ name: Daily Natural Frontend Contributions
 
 on:
   schedule:
-    # Distinto horario cada día, de lunes a sábado
-    - cron: '23 8 * * 1'   # Monday 08:23 UTC
-    - cron: '17 11 * * 2'  # Tuesday 11:17 UTC
-    - cron: '42 15 * * 3'  # Wednesday 15:42 UTC
-    - cron: '59 17 * * 4'  # Thursday 17:59 UTC
-    - cron: '25 21 * * 5'  # Friday 21:25 UTC
-    - cron: '08 13 * * 6'  # Saturday 13:08 UTC
+    - cron: '23 8 * * 1'
+    - cron: '17 11 * * 2'
+    - cron: '42 15 * * 3'
+    - cron: '59 17 * * 4'
+    - cron: '25 21 * * 5'
+    - cron: '08 13 * * 6'
   workflow_dispatch:
 
 jobs:
@@ -47,144 +46,109 @@ jobs:
           sveltejs/svelte
           solidjs/solid
           withastro/astro
-          builderio/qwik
           reduxjs/redux
-          testing-library/react-testing-library
           mui/material-ui
           ant-design/ant-design
           tailwindlabs/tailwindcss
           react-hook-form/react-hook-form
           remix-run/remix
-          preactjs/preact
           chakra-ui/chakra-ui
-          vuejs/pinia
           nuxt/nuxt
           storybookjs/storybook
-          graphql/graphql-js
           react-dnd/react-dnd
-          react-navigation/react-navigation
-          react-spring/react-spring
-          react-three-fiber/react-three-fiber
-          react-dropzone/react-dropzone
-          react-query/react-query
+          testing-library/react-testing-library
+          emotion-js/emotion
+          styled-components/styled-components
+          react-icons/react-icons
+          react-router/react-router
           tanstack/table
           pmndrs/zustand
           pmndrs/jotai
-          react-icons/react-icons
-          react-router/react-router
-          emotion-js/emotion
-          styled-components/styled-components
-          react-grid-layout/react-grid-layout
-          react-bootstrap/react-bootstrap
-          recharts/recharts
-          visgl/react-map-gl
-          react-virtualized/react-virtualized
-          react-pdf-viewer/react-pdf-viewer
-          react-beautiful-dnd/react-beautiful-dnd
           react-select/react-select
           react-datepicker/react-datepicker
           react-toastify/react-toastify
-          react-table/react-table
           cookpete/react-player
-          react-awesome-query-builder/awesome-query-builder
           EOF
 
-      - name: Pick a random repo
-        id: pick_repo
+      - name: Try repos until success
+        id: try_repos
         run: |
-          repos=($(shuf repos.txt))
-          for repo in "${repos[@]}"; do
-            echo "candidate=$repo" >> $GITHUB_OUTPUT
-            break
-          done
-
-      - name: Detect default branch
-        id: branch
-        run: |
-          candidate=${{ steps.pick_repo.outputs.candidate }}
-          branch=$(gh repo view "$candidate" --json defaultBranchRef -q ".defaultBranchRef.name")
-          echo "branch=${branch}" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ env.GH_TOKEN }}
-
-      - name: Clone the repo
-        run: |
-          git clone --depth 1 --branch ${{ steps.branch.outputs.branch }} https://github.com/${{ steps.pick_repo.outputs.candidate }}.git target-repo
-          cd target-repo
-          echo "Cloned ${{ steps.pick_repo.outputs.candidate }} on branch ${{ steps.branch.outputs.branch }}"
-
-      - name: Find a file to edit
-        id: file
-        run: |
-          cd target-repo
-          # Prioritize README, docs, examples, tests
-          file=""
-          for f in README.md readme.md docs/*.md docs/**/*.md examples/*.js examples/**/*.js test/*.js test/**/*.js tests/*.js tests/**/*.js .github/*.md .github/**/*.md; do
-            if [ -f "$f" ]; then
-              file="$f"
-              break
+          set -e
+          success=""
+          while read repo; do
+            echo "Trying $repo"
+            # Detect default branch
+            branch=$(gh repo view "$repo" --json defaultBranchRef -q ".defaultBranchRef.name" 2>/dev/null || echo "")
+            if [ -z "$branch" ]; then
+              echo "Could not get default branch for $repo. Skipping."
+              continue
             fi
-          done
-          if [ -z "$file" ]; then
-            # fallback to any .md or .js
-            file=$(find . -type f \( -name "*.md" -o -name "*.js" \) | head -1)
-          fi
-          if [ -z "$file" ]; then
-            echo "No eligible file found, exit 78"
+            git clone --depth 1 --branch "$branch" "https://github.com/$repo.git" target-repo 2>/dev/null || { echo "Clone failed for $repo. Skipping."; continue; }
+            cd target-repo
+
+            # Find a file to edit
+            file=""
+            for f in README.md readme.md docs/*.md docs/**/*.md examples/*.js examples/**/*.js test/*.js test/**/*.js tests/*.js tests/**/*.js .github/*.md .github/**/*.md; do
+              if [ -f "$f" ]; then
+                file="$f"
+                break
+              fi
+            done
+            if [ -z "$file" ]; then
+              file=$(find . -type f \( -name "*.md" -o -name "*.js" \) | head -1)
+            fi
+            if [ -z "$file" ]; then
+              cd ..
+              rm -rf target-repo
+              echo "No eligible file found in $repo. Skipping."
+              continue
+            fi
+
+            # Make a small contribution
+            echo "" >> "$file"
+            echo "<!-- Contributed by Franco Kaddour via a small improvement for learning and OSS love. -->" >> "$file"
+            echo "Done minor edit in $file"
+
+            # Create branch, commit and push
+            branch_name="franco/contrib-$(date +%s)"
+            git checkout -b "$branch_name"
+            git config user.name "${GIT_AUTHOR_NAME}"
+            git config user.email "${GIT_AUTHOR_EMAIL}"
+            git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/$repo.git
+            git add "$file"
+            git commit -m "Small improvement: docs/example/test (learning and OSS ❤️)"
+            git push --set-upstream origin "$branch_name" || { echo "Push failed for $repo. Skipping."; cd ..; rm -rf target-repo; continue; }
+            echo "branch=$branch_name" >> $GITHUB_OUTPUT
+
+            # Try to create PR
+            pr_url=$(gh pr create --title "Small docs/example/test improvement (learning and OSS ❤️)" \
+              --body "Hi! I made a small contribution to your project—just a tiny improvement to the docs/examples/tests. I love learning from open source and wanted to give back, even in a small way. Thanks for maintaining such a great frontend resource!\n—Franco" \
+              --head "$branch_name" --base "$branch" 2>/dev/null || echo "")
+            if [ -z "$pr_url" ]; then
+              echo "PR creation failed for $repo. Skipping."
+              cd ..
+              rm -rf target-repo
+              continue
+            fi
+            echo "pr_url=$pr_url" >> $GITHUB_OUTPUT
+
+            # Try to create Issue
+            gh issue create --title "Friendly contribution: small docs/example/test improvement" \
+              --body "Hello!\nI just opened a pull request with a small contribution (mostly docs/examples/tests).\nI really appreciate the effort you put into this project and wanted to participate, even if it’s just a little.\nThank you for your awesome work!\n—Franco\n\nPR: $pr_url" || true
+
+            # Cleanup
+            cd ..
+            rm -rf target-repo
+            success="ok"
+            break
+          done < repos.txt
+
+          if [ -z "$success" ]; then
+            echo "No successful contribution could be made."
             exit 78
           fi
-          echo "file=${file}" >> $GITHUB_OUTPUT
-
-      - name: Make a small contribution
-        id: edit
-        run: |
-          cd target-repo
-          file="${{ steps.file.outputs.file }}"
-          # Add a trailing blank line or personal note at the very end
-          echo "" >> "$file"
-          echo "<!-- Contributed by Franco Kaddour via a small improvement for learning and OSS love. -->" >> "$file"
-          echo "Done minor edit in $file"
-
-      - name: Create branch, commit and push
-        run: |
-          cd target-repo
-          branch_name="franco/contrib-$(date +%s)"
-          git checkout -b "$branch_name"
-          git config user.name "${GIT_AUTHOR_NAME}"
-          git config user.email "${GIT_AUTHOR_EMAIL}"
-          # Fix para autenticación con token
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ steps.pick_repo.outputs.candidate }}.git
-          git add "${{ steps.file.outputs.file }}"
-          git commit -m "Small improvement: docs/example/test (learning and OSS ❤️)"
-          git push --set-upstream origin "$branch_name"
-          echo "branch=$branch_name" >> $GITHUB_OUTPUT
-
-      - name: Create Pull Request (personal, educado, en inglés)
-        id: create_pr
-        run: |
-          cd target-repo
-          pr_url=$(gh pr create --title "Small docs/example/test improvement (learning and OSS ❤️)" \
-            --body "Hi! I made a small contribution to your project—just a tiny improvement to the docs/examples/tests. I love learning from open source and wanted to give back, even in a small way. Thanks for maintaining such a great frontend resource!\n—Franco" \
-            --head "$branch_name" --base "${{ steps.branch.outputs.branch }}" || true)
-          echo "pr_url=${pr_url}" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ env.GH_TOKEN }}
-
-      - name: Create Issue (personal, educado, en inglés)
-        if: steps.create_pr.outputs.pr_url != ''
-        run: |
-          cd target-repo
-          gh issue create --title "Friendly contribution: small docs/example/test improvement" \
-            --body "Hello!\nI just opened a pull request with a small contribution (mostly docs/examples/tests).\nI really appreciate the effort you put into this project and wanted to participate, even if it’s just a little.\nThank you for your awesome work!\n—Franco\n\nPR: ${{ steps.create_pr.outputs.pr_url }}"
-        env:
-          GH_TOKEN: ${{ env.GH_TOKEN }}
-
-      - name: Log if no PR was created
-        if: steps.create_pr.outputs.pr_url == ''
-        run: echo "No PR was created (maybe push failed or repo protected)."
-
-      - name: Cleanup
-        run: rm -rf target-repo
 
   update-profile:
     needs: contribute
