--- a/.github/workflows/daily-contributions.yaml
+++ b/.github/workflows/daily-contributions.yaml
@@ -19,6 +19,7 @@ jobs:
       GIT_AUTHOR_EMAIL: Francokaddour@gmail.com
       GIT_COMMITTER_EMAIL: Francokaddour@gmail.com
       GH_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+
     steps:
       - name: Checkout your own repo
         uses: actions/checkout@v4
@@ -34,37 +35,37 @@ jobs:
       - name: Prepare list of frontend popular repos
         run: |
           cat <<EOF > repos.txt
-vercel/next.js
-vitejs/vite
-facebook/react
-vuejs/core
-angular/angular
-sveltejs/svelte
-solidjs/solid
-withastro/astro
-reduxjs/redux
-mui/material-ui
-ant-design/ant-design
-tailwindlabs/tailwindcss
-react-hook-form/react-hook-form
-remix-run/remix
-chakra-ui/chakra-ui
-nuxt/nuxt
-storybookjs/storybook
-react-dnd/react-dnd
-testing-library/react-testing-library
-emotion-js/emotion
-styled-components/styled-components
-react-icons/react-icons
-react-router/react-router
-tanstack/table
-pmndrs/zustand
-pmndrs/jotai
-JedWatson/react-select
-react-datepicker/react-datepicker
-react-toastify/react-toastify
-cookpete/react-player
-EOF
+          vercel/next.js
+          vitejs/vite
+          facebook/react
+          vuejs/core
+          angular/angular
+          sveltejs/svelte
+          solidjs/solid
+          withastro/astro
+          reduxjs/redux
+          mui/material-ui
+          ant-design/ant-design
+          tailwindlabs/tailwindcss
+          react-hook-form/react-hook-form
+          remix-run/remix
+          chakra-ui/chakra-ui
+          nuxt/nuxt
+          storybookjs/storybook
+          react-dnd/react-dnd
+          testing-library/react-testing-library
+          emotion-js/emotion
+          styled-components/styled-components
+          react-icons/react-icons
+          react-router/react-router
+          tanstack/table
+          pmndrs/zustand
+          pmndrs/jotai
+          JedWatson/react-select
+          react-datepicker/react-datepicker
+          react-toastify/react-toastify
+          cookpete/react-player
+          EOF
 
       - name: Try repos until success
         id: contribute_any
@@ -76,7 +77,6 @@ EOF
           while read -r repo; do
             echo "Trying $repo"
 
-            # Obtener default branch
             branch=$(gh repo view "$repo" --json defaultBranchRef -q ".defaultBranchRef.name" 2>/dev/null)
             if [ -z "$branch" ]; then
               echo "No default branch for $repo. Skipping."
@@ -86,7 +86,6 @@ EOF
             git clone --depth 1 --branch "$branch" "https://github.com/$repo.git" target-repo
             cd target-repo
 
-            # Elegir primer archivo .md o .js
             file=$(find . -type f \( -iname "readme.md" -o -iname "*.md" -o -name "*.js" \) | head -n1)
             if [ -z "$file" ]; then
               echo "No eligible file in $repo. Skipping."
@@ -94,34 +93,26 @@ EOF
               continue
             fi
 
-            # Crear rama antes de editar
             branch_name="franco/contrib-$(date +%s)"
             git checkout -b "$branch_name"
 
-            # Aplicar el pequeño aporte
             echo "" >> "$file"
             echo "<!-- Contributed by Franco Kaddour via a small improvement for learning and OSS love. -->" >> "$file"
-            echo "Edited $file"
-
-            # Hacer commit correctamente
             git add -- "$file"
             git commit -m "Small improvement: docs/example/test (learning and OSS 🤗)"
-
-            # Push y creación de PR
             git push --set-upstream origin "$branch_name"
+
             pr_url=$(gh pr create \
               --title "Small docs/example/test improvement (learning and OSS 🤗)" \
               --body "Hi! I made a small contribution to your project—just a tiny improvement to the docs/examples/tests. I love learning from open source and wanted to give back, even in a small way.\n—Franco" \
               --head "$branch_name" --base "$branch" 2>/dev/null || echo "")
             echo "pr_url=$pr_url" >> $GITHUB_OUTPUT
 
-            # Crear issue friendly (opcional)
             gh issue create \
               --title "Friendly contribution: small docs/example/test improvement 🤗" \
-              --body "Hello!\nI just opened a pull request with a small contribution (mostly docs/examples/tests).\nI really appreciate the effort you put into this project and wanted to participate, even if it’s just a little.\nThank you for your awesome work!\n—Franco\n\nPR: $pr_url" \
+              --body "Hello!\nI just opened a pull request with a small contribution (mostly docs/examples/tests).\nI really appreciate the effort you put into este proyecto y quiero participar aunque sea con algo chico.\n¡Gracias por tu gran trabajo! 🤗\n—Franco\n\nPR: $pr_url" \
               || true
 
-            # Limpieza y fin del loop
             cd .. && rm -rf target-repo
             echo "success=ok" >> $GITHUB_OUTPUT
             break
@@ -138,6 +129,7 @@ EOF
     if: always()
     env:
       GH_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+
     steps:
       - name: Checkout your profile repo
         uses: actions/checkout@v4
@@ -172,3 +164,4 @@ EOF
           git add README.md
           git commit -m "Update recent contributions [bot]" || true
           git push
+
